update library
